vlib/v/checker/tests/struct_scope_duplicated_err.vv
fn main() {

	struct Foobar {
		foo int
		bar int
	}

	if true {
		struct Foobar {
			foo int
			bar int
		}
	}
}
